src/test/ui/parser/bounds-type.stderr
error: `?` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:10:8
   |
LL |     T: ?'a,
   |        ^

error: aborting due to previous error

